<resources>
    <string name="app_name">group4BoomshineAndroid</string>
    <string name="sNewGame">New Game</string>
    <string name="sNightmareMode">Nightmare Mode</string>
    <string name="sHelp">Help</string>
    <string name="sAbout">About</string>
    <string name="sVersion">Boomshine Version 1.0</string>
    <string name="sBy">By:</string>
    <string name="sAuthors">John Duong and Duane Stokes</string>
    <string name="sRules">Rules:</string>
    <string name="sRuleOne">There will be 2 balls per level.</string>
    <string name="sRuleTwo">To pass the level, you must hit half of the number of balls on the screen.</string>
    <string name="sRuleThree">To hit balls, you must tap the screen where a bomb will appear.</string>
    <string name="sRuleFour">The bomb will explode and hit other balls in its vicinity</string>
    <string name="sRuleFive">If you hit enough balls, your score will be accumulated and you go to the next level</string>
    <string name="sRuleSix">You get three tries to get the number of balls, if not the game restarts.</string>
    <string name="sBottomBar">Bottom Bar</string>
    <string name="sHighScore">High Score:</string>
    <string name="sScore">Score:</string>
    <string name="sToCatch">Balls to catch:</string>
    <string name="sCaught">Balls caught:</string>
    <string name="sLevel">Level:</string>
    <string name="sNumToCatch">0</string>
    <string name="sNumCaught">0</string>
    <string name="sLevelNum">0</string>
    <string name="sNumScore">0</string>
    <string name="sSpaces">   </string>

</resources>