<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cNavy">

    <TextView
        android:id="@+id/Rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sRules"
        android:textColor="@color/cBlack"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/RuleOne"
        android:layout_width="395dp"
        android:layout_height="46dp"
        android:text="@string/sRuleOne"
        android:textColor="@color/cBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rule"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/RuleTwo"
        android:layout_width="395dp"
        android:layout_height="44dp"
        android:text="@string/sRuleTwo"
        android:textColor="@color/cBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RuleOne"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/RuleThree"
        android:layout_width="393dp"
        android:layout_height="45dp"
        android:text="@string/sRuleThree"
        android:textColor="@color/cBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RuleTwo"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/RuleFour"
        android:layout_width="393dp"
        android:layout_height="46dp"
        android:text="@string/sRuleFour"
        android:textColor="@color/cBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RuleThree"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:id="@+id/RuleFive"
        android:layout_width="393dp"
        android:layout_height="47dp"
        android:text="@string/sRuleFive"
        android:textColor="@color/cBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RuleFour"
        app:layout_constraintVertical_bias="0.209" />

    <TextView
        android:id="@+id/RuleSix"
        android:layout_width="396dp"
        android:layout_height="45dp"
        android:text="@string/sRuleSix"
        android:textColor="@color/cBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RuleFive"
        app:layout_constraintVertical_bias="0.233" />

</androidx.constraintlayout.widget.ConstraintLayout>